ajustando a seleção das visualizações

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
     </div>
     <div id="select-container">
 
+        <div id="region-screen" class="active">
+            REGION
+        </div>
+
+        <div id="route-screen">
+            ROUTE
+        </div>
+
+        <div id="pokemon-screen">
+            POKEMON
+        </div>
+
     </div>
     <div id="content-container">
 
