--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 </head>
 <body>
     <div id="top-nav-container">
+
+        <div id="empty-container">
+        </div>
+
+        <div id="github-container">
+            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank"><img src="./assets/github.png" alt="Github Logo"></a>
+        </div>
+
+    </div>
     
     </div>
     <div id="main-container">
