adicionando logo do site e ajustando a top-nav

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
     <div id="top-nav-container">
 
         <div id="empty-container">
+
+        </div>
+
+        <div id="logo-container">
+            <img src="./assets/logo.png" alt="Page Logo">
         </div>
 
         <div id="github-container">
-            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank"><img src="./assets/github.png" alt="Github Logo"></a>
+            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank"><img src="./assets/github_w.png" alt="Github Logo"></a>
         </div>
 
     </div>
