--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div id="logo-container">
-            <img src="./assets/logo.png" alt="Page Logo">
+            <a href="./index.html"><img src="./assets/logo.png" alt="Page Logo"></a>
         </div>
 
         <div id="github-container">
