--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div id="route-screen">
-            ROUTE
+            LOCATION
         </div>
 
         <div id="pokemon-screen">
