--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="src/script.js" type="module"></script>
     <script src="src/data.js" type="module"></script>
     <script src="src/consts.js" type="module"></script>
+    <script src="src/pokemonScreen.js" type="module"></script>	
     <script src="src/radarChart.js" type="module"></script>	
 </head>
 <body>
