grafico dos tipos

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="src/consts.js" type="module"></script>
     <script src="src/pokemonScreen.js" type="module"></script>	
     <script src="src/radarChart.js" type="module"></script>	
+    <script src="src/types.js" type="module"></script>	
+    <script src="src/regionScreen.js" type="module"></script>	
 </head>
 <body>
     <div id="top-nav-container">
