--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             REGION
         </div>
 
-        <div id="route-screen">
+        <div id="location-screen">
             LOCATION
         </div>
 
