--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="src/radarChart.js" type="module"></script>	
     <script src="src/types.js" type="module"></script>	
     <script src="src/regionScreen.js" type="module"></script>	
+    <script src="src/locationScreen.js" type="module"></script>	
 </head>
 <body>
     <div id="top-nav-container">
