--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="src/types.js" type="module"></script>	
     <script src="src/regionScreen.js" type="module"></script>	
     <script src="src/locationScreen.js" type="module"></script>	
+    <script src="src/barchart.js" type="module"></script>	
 </head>
 <body>
     <div id="top-nav-container">
