incluindo os gráficos de ataque e defesa, modularizados

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="src/radarChart.js" type="module"></script>	
     <script src="src/types.js" type="module"></script>	
     <script src="src/regionScreen.js" type="module"></script>	
+    <script src="src/heatMapDef.js" type="module"></script>
+    <script src="src/heatMapAta.js" type="module"></script>
 </head>
 <body>
     <div id="top-nav-container">
