--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/regionScreen.js" type="module"></script>	
     <script src="src/locationScreen.js" type="module"></script>	
     <script src="src/barchart.js" type="module"></script>	
+    <script src="src/statsBarChart.js" type="module"></script>
 </head>
 <body>
     <div id="top-nav-container">
