corrigindo os paths

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Vis</title>
-    <base href="/pokemon-vis/" />
-    <link rel="icon" type="image/x-icon" href="./assets/ball.png">
+    <link rel="icon" type="image/x-icon" href="../assets/ball.png">
 
     <link rel="stylesheet" href="src/style.css">
 
@@ -31,11 +30,11 @@
         </div>
 
         <div id="logo-container">
-            <a href="./index.html"><img src="./assets/logo.png" alt="Page Logo"></a>
+            <a href="../index.html"><img src="../assets/logo.png" alt="Page Logo"></a>
         </div>
 
         <div id="github-container">
-            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank"><img src="./assets/github_w.png" alt="Github Logo"></a>
+            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank"><img src="../assets/github_w.png" alt="Github Logo"></a>
         </div>
 
     </div>
