adicionando os botões de left e right

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -31,6 +31,24 @@
                         <div class="margin-hor"></div>
                         <div class="main">
                             <div class="screen-left"></div>
+                            <div class="region-select">
+                                <div class="region-screen"></div>
+                                <div class="left-button">
+                                    <img id="region-left" src="../assets/left.png" alt="">
+                                </div>
+                                <div class="right-button">
+                                    <img id="region-right" src="../assets/right.png" alt="">
+                                </div>
+                            </div>
+                            <div class="location-display">
+                                <div class="location-screen"></div>
+                                <div class="left-button">
+                                    <img id="region-left" src="../assets/left.png" alt="">
+                                </div>
+                                <div class="right-button">
+                                    <img id="region-right" src="../assets/right.png" alt="">
+                                </div>
+                            </div>
                         </div>
                         <div class="margin-hor"></div>
                     </div>
