organizando os códigos

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -12,7 +12,11 @@
 <body>
     <div class="pokedex-container">
         <div class="pokedex-main-container">
+
+            <!-- Página 1 -->
             <div class="pokedex-page-1">
+
+                <!-- Parte Superior -->
                 <div class="pokedex-page-1-sup">
                     <div class="pokedex-page-1-sup-1">
                         <div class="botao-1"></div>
@@ -21,43 +25,56 @@
                     </div>
                     <div class="pokedex-page-1-sup-2">
                         <div class="botao-4">
-                            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank"><img id="folder" src="../assets/folder.png" alt=""></a>
+                            <a href="https://github.com/FGV-VIS-2025/pokemon-vis" target="_blank">
+                                <img id="folder" src="../assets/folder.png" alt="GitHub Folder">
+                            </a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Parte Inferior -->
                 <div class="pokedex-page-1-inf">
                     <div class="margin"></div>
+
                     <div class="main-content-left">
                         <div class="margin-hor"></div>
+
                         <div class="main">
                             <div class="screen-left"></div>
+
                             <div class="region-select">
                                 <div class="region-screen"></div>
                                 <div class="left-button">
-                                    <img id="region-left" src="../assets/left.png" alt="">
+                                    <img id="region-left" src="../assets/left.png" alt="Left">
                                 </div>
                                 <div class="right-button">
-                                    <img id="region-right" src="../assets/right.png" alt="">
+                                    <img id="region-right" src="../assets/right.png" alt="Right">
                                 </div>
                             </div>
+
                             <div class="location-display">
                                 <div class="location-screen"></div>
                                 <div class="left-button">
-                                    <img id="region-left" src="../assets/left.png" alt="">
+                                    <img id="location-left" src="../assets/left.png" alt="Left">
                                 </div>
                                 <div class="right-button">
-                                    <img id="region-right" src="../assets/right.png" alt="">
+                                    <img id="location-right" src="../assets/right.png" alt="Right">
                                 </div>
                             </div>
                         </div>
+
                         <div class="margin-hor"></div>
                     </div>
+
                     <div class="column"></div>
                 </div>
             </div>
+
+            <!-- Página 2 -->
             <div class="pokedex-page-2">
                 <div class="pokedex-page-2-inf"></div>
             </div>
+
         </div>
     </div>
 </body>
