--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -40,7 +40,14 @@
                         <div class="margin-hor"></div>
 
                         <div class="main">
-                            <div class="screen-left"></div>
+                            <div class="screen-left">
+                                <div class="top-nav-left-screen">
+                                    <div class="botao-5"></div>
+                                    <div class="botao-5"></div>
+                                </div>
+                                <div class="map-left-screen"></div>
+                                <div class="botton-nav-left-screen"></div>
+                            </div>
 
                             <div class="region-select">
                                 <div class="region-screen"></div>
@@ -72,7 +79,27 @@
 
             <!-- Página 2 -->
             <div class="pokedex-page-2">
-                <div class="pokedex-page-2-inf"></div>
+                <div class="pokedex-page-2-inf">
+                    <div class="main-content-right">
+                        <div class="margin-hor"></div>
+                        <div class="screen-right">
+                            <div class="cards-display"></div>
+                            <div class="screen-select">
+                                <div class="region-button">
+                                    <img src="../assets/earth-globe.png" alt="">
+                                </div>
+                                <div class="location-button">
+                                    <img src="../assets/compass.png" alt="">
+                                </div>
+                                <div class="pokemons-button">
+                                    <img src="../assets/pokeball.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="margin-hor"></div>
+                    </div>
+                    <div class="margin-right"></div>
+                </div>
             </div>
 
         </div>
