página dos autores e das instruções feita pela metade

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -122,9 +122,169 @@
 
         </div>
     </div>
-    <div class="interval-1"></div>
-    <div class="content-container"></div>
-    <div class="interval-2"></div>
-    <div class="authors-container"></div>
+    <div class="interval-1">
+        <div class="cabo-1">
+            <div class="ponta-1"></div>
+            <div class="corpo-cabo">
+                <img src="../assets/power.png" alt="">
+            </div>
+            <div class="ponta-1"></div>
+        </div>
+
+        <div class="cabo-2">
+            <div class="ponta-2"></div>
+            <div class="corpo-cabo">
+                <img src="../assets/usb.png" alt="">
+            </div>
+            <div class="ponta-2"></div>
+        </div>
+    </div>
+    <div class="content-container">
+        <div class="content-external-content">
+            <div class="content-screen"></div>
+            <div class="content-button">
+                <div class="real-content-button">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="interval-2">
+        <div class="cabo-3">
+            <div class="ponta-1"></div>
+            <div class="corpo-cabo">
+                <img src="../assets/power.png" alt="">
+            </div>
+            <div class="ponta-1"></div>
+        </div>
+
+        <div class="cabo-4">
+            <div class="ponta-2"></div>
+            <div class="corpo-cabo">
+                <img src="../assets/usb.png" alt="">
+            </div>
+            <div class="ponta-2"></div>
+        </div>
+
+        <div class="cabo-5">
+            <div class="ponta-3"></div>
+            <div class="corpo-cabo">
+                <img src="../assets/audio.png" alt="">
+            </div>
+            <div class="ponta-3"></div>
+        </div>
+    </div>
+    <div class="authors-container">
+        <div class="authors-external-content">
+            <div class="instructions-div"></div>
+            <div class="authors-div">
+                <div class="author">
+                    <div class="author-img">
+                        <img src="../assets/alessandra.png" alt="">
+                    </div>
+                    <div class="author-description">
+                        <div class="authors-info">
+                            <div class="cabeçalhos">
+                                <p>
+                                    Nome: <br>
+                                    Idade: <br>
+                                    Pokémon Favorito: <br>
+                                    Faculdade: <br>
+                                    Curso:
+                                </p>
+                            </div>
+                            <div class="infos">
+                                <p>
+                                    Alessandra Belló <br>
+                                    22 anos <br>
+                                    Pikachu <br>
+                                    EMAp-FGV <br>
+                                    Ciência de Dados e IA
+                                </p>
+                            </div>
+                        </div>
+                        <div class="authors-buttons">
+                            <div class="linkedin-button" id="linkedin-alessandra">
+                                <img src="../assets/linkedin.png" alt="">
+                            </div>
+                            <div class="github-button" id="github-alessandra">
+                                <img src="../assets/github-sign.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="author">
+                    <div class="author-img">
+                        <img src="../assets/profile.png" alt="">
+                    </div>
+                    <div class="author-description">
+                        <div class="authors-info">
+                            <div class="cabeçalhos">
+                                <p>
+                                    Nome: <br>
+                                    Idade: <br>
+                                    Pokémon Favorito: <br>
+                                    Faculdade: <br>
+                                    Curso:
+                                </p>
+                            </div>
+                            <div class="infos">
+                                <p>
+                                    Matheus Carvalho <br>
+                                    21 anos <br>
+                                    Gyarados <br>
+                                    EMAp-FGV <br>
+                                    Ciência de Dados e IA
+                                </p>
+                            </div>
+                        </div>
+                        <div class="authors-buttons">
+                            <div class="linkedin-button" id="linkedin-matheus">
+                                <img src="../assets/linkedin.png" alt="">
+                            </div>
+                            <div class="github-button" id="github-matheus">
+                                <img src="../assets/github-sign.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="author">
+                    <div class="author-img">
+                        <img src="../assets/sillas.png" alt="">
+                    </div>
+                    <div class="author-description">
+                        <div class="authors-info">
+                            <div class="cabeçalhos">
+                                <p>
+                                    Nome: <br>
+                                    Idade: <br>
+                                    Pokémon Favorito: <br>
+                                    Faculdade: <br>
+                                    Curso:
+                                </p>
+                            </div>
+                            <div class="infos">
+                                <p>
+                                    Sillas Rocha <br>
+                                    20 anos <br>
+                                    Magikarp <br>
+                                    EMAp-FGV <br>
+                                    Ciência de Dados e IA
+                                </p>
+                            </div>
+                        </div>
+                        <div class="authors-buttons">
+                            <div class="linkedin-button" id="linkedin-sillas">
+                                <img src="../assets/linkedin.png" alt="">
+                            </div>
+                            <div class="github-button" id="github-sillas">
+                                <img src="../assets/github-sign.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
