funcionamento da seleção de regiões e locations

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -9,6 +9,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./main.js" type="module"></script>
     <script src="./buttonsAnimation.js" type="module"></script>
+    <script src="./regionControl.js" type="module"></script>
+    <script src="./locationControl.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
@@ -44,12 +46,16 @@
                                     <div class="botao-5"></div>
                                     <div class="botao-5"></div>
                                 </div>
-                                <div class="map-left-screen"></div>
+                                <div class="map-left-screen">
+                                    <img src="../assets/maps/Kanto.png" id="map-img" alt="">
+                                </div>
                                 <div class="botton-nav-left-screen"></div>
                             </div>
 
                             <div class="region-select">
-                                <div class="region-screen"></div>
+                                <div class="region-screen">
+                                    Kanto
+                                </div>
                                 <div class="left-button">
                                     <img id="region-left" src="../assets/left.png" alt="Left">
                                 </div>
@@ -215,7 +221,7 @@
                 </div>
                 <div class="author">
                     <div class="author-img">
-                        <img src="../assets/profile.png" alt="">
+                        <img src="../assets/matheus.png" alt="">
                     </div>
                     <div class="author-description">
                         <div class="authors-info">
