integrando os gráficos das regiões na jogada

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -11,6 +11,11 @@
     <script src="./buttonsAnimation.js" type="module"></script>
     <script src="./regionControl.js" type="module"></script>
     <script src="./locationControl.js" type="module"></script>
+    <script src="./contentScreenManager.js" type="module"></script>
+    <script src="./regionScreen.js" type="module"></script>
+    <script src="./barchart.js" type="module"></script>
+    <script src="./types.js" type="module"></script>
+    <script src="./consts.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
