integração parcial com dos gráficos da alessandra com a pokedex

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -16,6 +16,7 @@
     <script src="./barchart.js" type="module"></script>
     <script src="./types.js" type="module"></script>
     <script src="./consts.js" type="module"></script>
+    <script src="./locationScreen.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
