ajustando a comunicação da pokedex e a tela principal

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -155,7 +155,7 @@
             <div class="content-screen"></div>
             <div class="content-button">
                 <div class="real-content-button">
-
+                    <img src="../assets/game.png" alt="">
                 </div>
             </div>
         </div>
