primeira integração com as cartas

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -93,7 +93,9 @@
                     <div class="main-content-right">
                         <div class="margin-hor"></div>
                         <div class="screen-right">
-                            <div class="cards-display"></div>
+                            <div class="cards-display">
+                                
+                            </div>
                             <div class="pokemons-select">
                                 <div class="left-pokemon">
                                     <img id="left-pokemon" src="../assets/left.png" alt="Left">
