funcionamento do carrossel de cartas

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -17,6 +17,7 @@
     <script src="./types.js" type="module"></script>
     <script src="./consts.js" type="module"></script>
     <script src="./locationScreen.js" type="module"></script>
+    <script src="./cardsPokedex.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
@@ -101,7 +102,7 @@
                                     <img id="left-pokemon" src="../assets/left.png" alt="Left">
                                 </div>
                                 <div class="home-pokemon">
-                                    <img id="pokemon-right" src="../assets/home.png" alt="Home">
+                                    <img id="pokemon-home" src="../assets/home.png" alt="Home">
                                 </div>
                                 <div class="right-pokemon">
                                     <img id="pokemon-right" src="../assets/right.png" alt="Right">
