integrando na jogada o gráfico de radar

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -18,6 +18,7 @@
     <script src="./consts.js" type="module"></script>
     <script src="./locationScreen.js" type="module"></script>
     <script src="./cardsPokedex.js" type="module"></script>
+    <script src="./radarChart.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
