adicionando os heatmaps na jogada

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -19,6 +19,8 @@
     <script src="./locationScreen.js" type="module"></script>
     <script src="./cardsPokedex.js" type="module"></script>
     <script src="./radarChart.js" type="module"></script>
+    <script src="./heatMapDef.js" type="module"></script>
+    <script src="./heatMapAta.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
