terminando de fazer a aba dos pokémons

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -123,8 +123,8 @@
                                 </div>
                             </div>
                             <div class="second-row-buttons">
-                                <div class="authors-button">
-                                    <img src="../assets/user.png" alt="">
+                                <div class="info-button">
+                                    <img src="../assets//info.png" alt="">
                                 </div>
                                 <div class="scroll-button">
                                     <img src="../assets/chart.png" alt="">
