--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -21,6 +21,8 @@
     <script src="./radarChart.js" type="module"></script>
     <script src="./heatMapDef.js" type="module"></script>
     <script src="./heatMapAta.js" type="module"></script>
+    <script src="./mapsConsts.js" type="module"></script>
+    <script src="./mapManager.js" type="module"></script>
 </head>
 <body>
     <div class="pokedex-container">
@@ -56,8 +58,10 @@
                                     <div class="botao-5"></div>
                                     <div class="botao-5"></div>
                                 </div>
-                                <div class="map-left-screen">
-                                    <img src="../assets/maps/Kanto.png" id="map-img" alt="">
+                                <div class="real-map-container">
+                                    <div class="map-left-screen">
+                                        <img src="../assets/maps/Kanto.png" id="map-img" alt="">
+                                    </div>
                                 </div>
                             </div>
 
