adicionando o pdf da descrição

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -196,7 +196,13 @@
     </div>
     <div class="authors-container">
         <div class="authors-external-content">
-            <div class="instructions-div"></div>
+            <div class="instructions-div">
+                <object class="pdf" 
+                        data="https://eppg.fgv.br/sites/default/files/teste.pdf"
+                        width="100%"
+                        height="100%">
+                    </object>
+            </div>
             <div class="authors-div">
                 <div class="author">
                     <div class="author-img">
