remove console logs desnecessários e adiciona novo gráfico de distribuição de atributos dos Pokémon

--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,9 @@
     <script src="./heatMapAta.js" type="module"></script>
     <script src="./mapsConsts.js" type="module"></script>
     <script src="./mapManager.js" type="module"></script>
+    <script src="./boxplot.js" type="module"></script>
 </head>
+
 <body>
     <div class="pokedex-container">
         <div class="pokedex-main-container">
@@ -97,11 +100,11 @@
             <div class="pokedex-page-2">
                 <div class="pokedex-page-2-inf">
                     <div class="main-content-right-pai">
-                        
+
                         <div class="main-content-right">
                             <div class="screen-right">
                                 <div class="cards-display">
-                                    
+
                                 </div>
                                 <div class="pokemons-select">
                                     <div class="left-pokemon">
@@ -197,11 +200,8 @@
     <div class="authors-container">
         <div class="authors-external-content">
             <div class="instructions-div">
-                <object class="pdf" 
-                        data="https://eppg.fgv.br/sites/default/files/teste.pdf"
-                        width="100%"
-                        height="100%">
-                    </object>
+                <object class="pdf" data="https://eppg.fgv.br/sites/default/files/teste.pdf" width="100%" height="100%">
+                </object>
             </div>
             <div class="authors-div">
                 <div class="author">
@@ -313,4 +313,5 @@
         </div>
     </div>
 </body>
+
 </html>
