--- a/pokedex-project/index.html
+++ b/pokedex-project/index.html
@@ -18,6 +18,7 @@
     <script src="./types.js" type="module"></script>
     <script src="./consts.js" type="module"></script>
     <script src="./locationScreen.js" type="module"></script>
+    <script src="./scatterPlot.js" type="module"></script>
     <script src="./cardsPokedex.js" type="module"></script>
     <script src="./radarChart.js" type="module"></script>
     <script src="./heatMapDef.js" type="module"></script>
